--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 							<p class="copyright">
 								<script>
 									var mydate = new Date();
+									document.writeln("Copyright&nbsp;&copy;&nbsp;2021 - " + mydate.getFullYear() + '&nbsp;<a target="_blank" href=""></a><br />All&nbsp;Rights&nbsp;Reserved');
+
 							</p>
 						</div>
 					</div>
